将框架改为模板类，将接口服务管理作为模板参数，定义多个接口服务管理方法

--- a/code/service/app/CMakeLists.txt
+++ b/code/service/app/CMakeLists.txt
@@ -1,4 +1,5 @@
 ﻿include_directories(${CMAKE_SOURCE_DIR}/common/include)
+include_directories(${CMAKE_SOURCE_DIR}/service/core/include)
 
 # 查找所有子文件夹和文件夹
 file(GLOB subdirectories RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
