将事件处理由观察者模式更改为回调函数模式，增加事件处理example

--- a/3rdParty/config/serviceApp.json
+++ b/3rdParty/config/serviceApp.json
@@ -3,19 +3,23 @@
 	{
 		"AppController":
 		{
+			"Enable" : true,
 			"LogLevel":4
 		},
 		"ComponentDemo" :
 		{
+			"Enable" : true,
 			"LogLevel":5
 		},
 		"ProtoRpcServer" :
 		{
+			"Enable" : true,
 			"LogLevel":5,
 			"ServThreadNum":4
 		},
 		"AuthorityManager" :
 		{
+			"Enable" : true,
 			"LogLevel":5
 		}
 	}
