--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -113,3 +113,9 @@ option(BUILD_TESTS "build tests" "ON")
 if(BUILD_TESTS)
 	ADD_SUBDIRECTORY(test)
 endif(BUILD_TESTS)
+
+option(BUILD_EXAMPLES "build examples" "ON")
+if(BUILD_EXAMPLES)
+	option(INSTALL_EXAMPLE "install" "ON")
+	ADD_SUBDIRECTORY(example)
+endif(BUILD_EXAMPLES)
