ubuntu18/20编译，ubuntu环境依赖库编译，ubuntu docker编译环境、运行环境构建

--- a/3rdParty/config/serviceApp.json
+++ b/3rdParty/config/serviceApp.json
@@ -15,7 +15,8 @@
 		{
 			"Enable" : true,
 			"LogLevel":5,
-			"ServThreadNum":4
+			"ServThreadNum":4,
+			"ServPort" : 30020
 		},
 		"AuthorityManager" :
 		{
