--- a/code/common/source/util/CMakeLists.txt
+++ b/code/common/source/util/CMakeLists.txt
@@ -4,10 +4,10 @@ project(mmrUtil)
 
 #文件分组
 file(GLOB COMMON_HEADS "${CMAKE_SOURCE_DIR}/common/include/*.h" "${CMAKE_SOURCE_DIR}/common/include/*.hpp")
-source_group("include" FILES ${COMMON_HEADS})
+source_group("include/common" FILES ${COMMON_HEADS})
 
 file(GLOB COMMON_SOURCE "${CMAKE_SOURCE_DIR}/common/source/*.cpp")
-source_group("include" FILES ${COMMON_SOURCE})
+source_group("source/common" FILES ${COMMON_SOURCE})
 
 file(GLOB FILE_HEADS "${CMAKE_SOURCE_DIR}/common/include/util/*.h" "${CMAKE_SOURCE_DIR}/common/include/util/*.hpp")
 source_group("include/util" FILES ${FILE_HEADS})
@@ -22,7 +22,7 @@ if(BUILD_EXAMPLES)
 	set(INSTALL_PATH ${INSTALL_PATH} example)
 endif(BUILD_EXAMPLES)
 
-build_shared_library( mmrUtil
+build_shared_library( ${PROJECT_NAME}
 	#project folder in VS
 	FOLDER common
 	#源文件
