增加模板编程先关组件、增加Matrix类、Variant类、内存分配类等

--- a/3rdParty/config/serviceApp.json
+++ b/3rdParty/config/serviceApp.json
@@ -1,10 +1,21 @@
 {
-	"Components" :
+	"Logger" :	//日志设置
 	{
-		"ComponentDemo" :
+		"LogFileNum" : 10,//保留的日志文件数量
+		"LogFileSize" : 16, //日志文件大小，单位Mb
+		"LogAsyn" : true //是否异步日志
+	},
+	"Allocator" :	//内存分配器设置
+	{
+		"CacheMaxSize" : 64,//缓存最大值，单位Mb
+		"CacheExpiredTime" : 60	//缓存过期清理时间，单位Min，
+	},
+	"Components" :	//组件设置
+	{
+		"ComponentDemo" :	//组件名称
 		{
-			"Enable" : true,
-			"LogLevel":5
+			"Enable" : true,	//是否启用
+			"LogLevel":5	//组件日志等级
 		},
 		"ProtoRpcServer" :
 		{
